--- a/app/src/main/res/layout/job_details_window.xml
+++ b/app/src/main/res/layout/job_details_window.xml
@@ -157,7 +157,15 @@
         android:textDirection="rtl"
         android:visibility="gone"
         android:text="הוסף אירוע  ללוח שנה שלי" />
-
+        <Button
+            android:id="@+id/cancelJobApply"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textDirection="rtl"
+            android:visibility="gone"
+            android:text="ביטול מועמדות" />
 
 </LinearLayout>
 </ScrollView>
