showing matching level by color marker on map

--- a/app/src/main/res/layout/activity_job_profile.xml
+++ b/app/src/main/res/layout/activity_job_profile.xml
@@ -195,6 +195,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:background="@drawable/layoutborder"
                 android:layoutDirection="rtl" />
             <Button
                 android:id="@+id/saveBtn"
