--- a/app/src/main/res/layout/activity_seeker_jobs_applied.xml
+++ b/app/src/main/res/layout/activity_seeker_jobs_applied.xml
@@ -11,5 +11,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jobSearchApp.android.SeekerJobsApplied">
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/emptyJobListMessage"
+    android:text="אין מועמדויות למשרות"
+    android:textColor="@color/colorAccent"
+    android:textDirection="rtl"
+    android:layout_gravity="center_horizontal"
+    android:textSize="25dp"
+    android:visibility="gone"/>
 </LinearLayout>
