--- a/app/src/main/res/layout/job_details_window.xml
+++ b/app/src/main/res/layout/job_details_window.xml
@@ -3,169 +3,207 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/menubackground">
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
         android:id="@+id/popup"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/menubackground"
+        android:layoutDirection="rtl"
         android:orientation="vertical"
-    android:paddingRight="10dp"
-    android:layoutDirection="rtl"
-    android:background="@drawable/menubackground">
+        android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/jobName"
-            android:textColor="@color/wallet_bright_foreground_holo_light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textDirection="rtl"
-            android:text=""
             android:paddingBottom="10dp"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/wallet_bright_foreground_holo_light"
+            android:textDirection="rtl" />
 
         <TextView
             android:id="@+id/jobDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textDirection="rtl"
-            android:text=""
             android:paddingBottom="10dp"
-          />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text="תפקיד: "
-        android:textStyle="bold"
-        />
-    <TextView
-        android:id="@+id/jobPosition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text=""
-        android:paddingBottom="10dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text="דרישות משרה:"
-        android:textStyle="bold"
-        />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layoutDirection="rtl">
-    <TextView
-        android:id="@+id/jobSkill1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text=""
-        android:paddingLeft="10dp"
-        />
-    <TextView
-        android:id="@+id/jobYearsSkill1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text=""
-        />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layoutDirection="rtl">
+            android:text=""
+            android:textDirection="rtl" />
+
         <TextView
-            android:id="@+id/jobSkill2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="תפקיד: "
             android:textDirection="rtl"
-            android:text=""
-            android:paddingLeft="10dp"
-            />
+            android:textStyle="bold" />
+
         <TextView
-            android:id="@+id/jobYearsSkill2"
+            android:id="@+id/jobPosition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textDirection="rtl"
+            android:paddingBottom="10dp"
             android:text=""
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layoutDirection="rtl"
-        android:paddingBottom="10dp">
+            android:textDirection="rtl" />
+
         <TextView
-            android:id="@+id/jobSkill3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="דרישות משרה:"
             android:textDirection="rtl"
-            android:text=""
-            android:paddingLeft="10dp"
-            />
-        <TextView
-            android:id="@+id/jobYearsSkill3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textDirection="rtl"
-            android:text=""
-            />
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text="מיקום משרה:"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/jobAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text=""
-        android:paddingBottom="10dp"
-        />
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-        <Button
-            android:id="@+id/applyToJob"
-            android:layout_marginTop="10dp"
+            android:layoutDirection="rtl"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/jobSkill1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text=""
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/jobYearsSkill1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textDirection="rtl" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textDirection="rtl"
-            android:text="הגשת מועמדות" />
-    <Button
-        android:id="@+id/requestTraining"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:text="פניה לחברת הכשרה" />
+            android:layoutDirection="rtl"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/jobSkill2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text=""
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/jobYearsSkill2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textDirection="rtl" />
         </LinearLayout>
-    <Button
-        android:id="@+id/setInterviewOnCalendar"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textDirection="rtl"
-        android:visibility="gone"
-        android:text="הוסף אירוע  ללוח שנה שלי" />
-        <Button
-            android:id="@+id/cancelJobApply"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp">
+
+            <TextView
+                android:id="@+id/jobSkill3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text=""
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/jobYearsSkill3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textDirection="rtl" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="מיקום משרה:"
+            android:textDirection="rtl"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/jobAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text=""
+            android:textDirection="rtl" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/applyToJob"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="הגשת מועמדות"
+                android:textDirection="rtl" />
+
+            <Button
+                android:id="@+id/requestTraining"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="פניה לחברת הכשרה"
+                android:textDirection="rtl" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/interviewInfoTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text=""
+            android:textDirection="rtl"
+            android:visibility="gone"/>
+
+        <LinearLayout
+            android:id="@+id/interviewInfoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textDirection="rtl"
-            android:visibility="gone"
-            android:text="ביטול מועמדות" />
+            android:orientation="horizontal"
+            android:visibility="gone">
 
-</LinearLayout>
+                <Button
+                    android:id="@+id/rejectInterview"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingLeft="10dp"
+                    android:text="בקש מועד חדש לראיון"
+                    android:textDirection="rtl"
+                    />
+
+                <Button
+                    android:id="@+id/setInterviewOnCalendar"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="אשר והוסף ללוח שנה"
+                    android:textDirection="rtl" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/cancelJobApply"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:text="ביטול מועמדות"
+            android:textDirection="rtl"
+            android:visibility="gone"/>
+
+    </LinearLayout>
 </ScrollView>
