--- a/app/src/main/res/layout/show_jobs_on_list.xml
+++ b/app/src/main/res/layout/show_jobs_on_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -17,12 +17,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
        android:layout_below="@+id/sort_spinner"
+        android:layoutDirection="rtl"
         android:fillViewport="true" >
         <LinearLayout
             android:id="@+id/scrollViewLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:layoutDirection="rtl"
+            android:orientation="vertical"/>
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
